# smart-pay

./: .gitignore  =1.2.0  =2.5.0  =2.5.0-  DAG_CONSENSUS_ANALYSIS_AND_IMPROVEMENT_PLAN.md  DAG_CONSENSUS_EXECUTIVE_SUMMARY.md  DAG_CONSENSUS_IMPLEMENTATION_STATUS.md  DAG_CONSENSUS_QUICK_REFERENCE.md  Makefile  P2P_Implementation_Summary.md  README.md  REALWORLD_DEMO_PLAN.md  REFACTOR_PLAN.MD  WEIGHTED_VOTING_INTEGRATION_PLAN.md  fastpay_wifi_simulation_plan.md  mn7990_sta1-wlan0_wifiDirect.conf  mn7990_sta2-wlan0_wifiDirect.conf  p2p_communication_implementation_plan.md  pyproject.toml  sequence_diagram.txt  setup.py
context/: P2P_Implementation_Summary.md  acm.txt  mesh.txt  offline_payment_ds_plan.md  p2p_communication_implementation_plan.md  scientific_abstract.md
doc/: offline_payment_ds_plan.md
docs/: README_drawio_imports.md  architecture_summary.md  ascii_diagrams.txt  meshpay_architecture_diagrams.md  meshpay_implementation.tex  mxGraphModel_flows.xml  transfer_order_flow_drawio.xml  withdrawal_architecture_proposal.md  withdrawal_protocol_flow_drawio.xml
examples/: authority.py  ble_gateway.py  demoCommon.py  demoWifiDirect.py  fastpay_cli.py  fastpay_demo.py  fastpay_evaluation.py  fastpay_mesh_demo.py  fastpay_mesh_internet_demo.py  fastpay_p2p_benchmark.py  mesh.py  mesh_internet_bridge.py  meshpay_demo.py  run_evaluation.sh  wifiDirect.py  wifi_direct_enhanced.py
fastpay-wifi-sim/: README.md  pytest.ini  requirements.txt  setup.py
meshpay/: __init__.py  cli_fastpay.py  committee.py  messages.py  types.py
mininet_wifi.egg-info/: PKG-INFO  (+3 more)
(+100 files in other folders)
